--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-  <video autoplay></video>
+  <h1>Soul ESPM 2019</h1>
+  <section class="section-1">
+    <div id="trash-type" class="info">
+      <div class="title">Lixo</div>
+      <div class="trash-icon"></div>
+    </div>
+    <video autoplay id="camera"></video>
+    <div id="object" class="info">Objeto</div>
+
+  </section>
+
+
+
   <script src="./js/index.js"></script>
 </body>
 
