--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <div class="trash-icon"></div>
     </div>
     <video autoplay id="camera"></video>
-    <div id="object" class="info">Objeto</div>
+    <div id="object" class="info">
+      <div class="title">Objeto</div>
+      <div class="type-icon"></div>
+    </div>
 
   </section>
 
