Fixed index route to style sheets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Soul 2019</title>
   <!-- link to CSS -->
-  <link rel="stylesheet" href="./css/camera.css">
+  <link rel="stylesheet" href="./front-end/css/camera.css">
   <!-- link to google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
 	<video id="preview" width="300" height="225"></video>
 	<div id="divOverlay"></div>
 	<canvas id="photo" width="300" height="225"></canvas>
-	<script src="./js/camera.js"></script>	
+	<script src="./front-end/js/camera.js"></script>	
 </body>
 
 </html>
